lang.java.statics.test/tests/positive/classes/class-in-package-of-same-name.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [p]
    package p;
    public class p {}

}
