lang.java.statics.test/tests/negative/packages/classes-with-same-name-in-toplevel-package.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type
JAVAC  fail duplicate class

[p] {

    [A]
    package p;
    public class A {}

    [A]
    package p;
    public class A {}

}
